Fix h1 clipping

--- a/css/master.css
+++ b/css/master.css
@@ -77,6 +77,7 @@ h1 {
   position: relative;
   font-style: italic;
   overflow: hidden;
+  margin: 0 -1em;
 }
 
 h1::before {
